Functions for 1)Calculate Total Amount Paid, 2)Calculate PayPal Fees, 3)Calculate Profit

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
                <td colspan=2 class="hdr">Depop selling fees calculator</td>
             </tr>
             <tr>
-                <td colspan=2 class="txt">A simple way to calculate your Depop & paypal fees.</td>
+                <td colspan=2 class="txt">A simple way to calculate your Depop & PayPal fees.</td>
             </tr>
               <tr>
                 <td class="rcvd_tr">
                      Item sold price &larr;
                 </td>
                 <td>
-                     $<input class="text_box" type="text" id="finalprice_sold_price_received" onblur=calculate_fees();>
+                     $<input class="text_box" type="text" id="final_sold_price_received" onblur=calculate_fees();>
                 </td>              
            </tr>
            <tr>
@@ -29,7 +29,7 @@
                      Shipping price charged &larr;
                 </td>
                 <td>
-                     $<input class="text_box" type="text" id="finalprice_ship_price_received" onblur=calculate_fees();>
+                     $<input class="text_box" type="text" id="final_ship_price_received" onblur=calculate_fees();>
                 </td>              
            </tr>
            <tr>
@@ -37,7 +37,7 @@
                      Cost to purchase &rarr;
                 </td>
                 <td>
-                     $<input class="text_box" type="text" id="fp_purchase_price_paid" onblur=calculate_fees();>
+                     $<input class="text_box" type="text" id="final_purchase_price_paid" onblur=calculate_fees();>
                 </td>              
            </tr>
            <tr>
@@ -45,7 +45,7 @@
                      Actual shipping price &rarr;
                 </td>
                 <td>
-                     $<input class="text_box" type="text" id="fp_ship_price_paid" onblur=calculate_fees();>
+                     $<input class="text_box" type="text" id="final_ship_price_paid" onblur=calculate_fees();>
                 </td>              
            </tr>            
           <tr>
