--- a/index.html
+++ b/index.html
@@ -100,6 +100,6 @@
         </div>
          </body>
          </form>
-         <script src="js/ebay-fees-calc.js"></script>
+         <script src="js/depop-fees-calc.js"></script>
 </body>
 </html>
